[gd_scene load_steps=21 format=4 uid="uid://cjw38tueccimo"]

[ext_resource type="PackedScene" uid="uid://bs5ektkfh3xp6" path="res://scenes/levels/_base_level.tscn" id="1_m4urd"]
[ext_resource type="TileSet" uid="uid://bikb2x45eislk" path="res://assets/sprites/world_tileset.tres" id="2_0befv"]
[ext_resource type="Script" path="res://scripts/levels/moving_around.gd" id="2_bw0ek"]
[ext_resource type="PackedScene" uid="uid://bvn77df78au71" path="res://scenes/cutscene_borders.tscn" id="3_pscvc"]
[ext_resource type="FontFile" uid="uid://btbwyj1np053s" path="res://assets/fonts/PixelOperator8.ttf" id="4_16v5f"]
[ext_resource type="Texture2D" uid="uid://bbhswlkgrnkwa" path="res://assets/sprites/villagers.png" id="6_3nv7n"]
[ext_resource type="PackedScene" uid="uid://5bvgxd6v1kol" path="res://scenes/shaker.tscn" id="7_jisdn"]
[ext_resource type="Texture2D" uid="uid://dnrqvlyb67hpv" path="res://assets/sprites/dragon.png" id="8_3okcy"]

[sub_resource type="SpriteFrames" id="SpriteFrames_gk8l2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_3nv7n")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="Curve2D" id="Curve2D_qldd0"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -0.370178, -1.29628, 79.9947, -10.8031, -79.9947, 10.8031, -171.481, 55.7407, 80.2519, 19.5486, -80.2519, -19.5486, -350.37, 50.5556, 57.7434, 16.1682, -57.7434, -16.1682, -469.629, 9.07409, 0, 0, 0, 0, -622.592, -16.8518, 0, 0, 0, 0, -747.037, -11.6667, 54.5675, -6.92921, -54.5675, 6.92921, -868.889, -6.48147, 0, 0, 0, 0, -1457.41, 47.963, -110.223, 27.1915, 110.223, -27.1915, -599.259, 79.0741, 0, 0, 0, 0, -340, 3.8889, 0, 0, 0, 0, 33.3335, -19.4444)
}
point_count = 11

[sub_resource type="SpriteFrames" id="SpriteFrames_kh3hk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_3okcy")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_kcwt5"]
resource_name = "VillagersEnter"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CutsceneContent/Villagers:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(347.143, 47.5), Vector2(187.143, 47.5)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/CutsceneBorders")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(3, 4),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": ["Terrified villagers", "Right", "Princess Elora! Help!!!"],
"method": &"display_text"
}, {
"args": [],
"method": &"display_next"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Player")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["cutscene_idle"],
"method": &"play_sprite"
}]
}

[sub_resource type="Animation" id="Animation_vdnm5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CutsceneContent/Villagers:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(347.143, 47.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CutsceneContent/Path2D/PathFollow2D:progress_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CutsceneContent/Path2D/PathFollow2D/Dragon:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_q0qt0"]
resource_name = "PrincessOk"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/CutsceneBorders")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": ["Princess Elora", "Left", "Oh, I see what it is about. I'll take care of it."],
"method": &"display_text"
}, {
"args": [],
"method": &"display_next"
}]
}

[sub_resource type="Animation" id="Animation_aurhn"]
resource_name = "DragonFly"
length = 8.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CutsceneContent/Path2D/PathFollow2D:progress_ratio")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3, 4, 8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.5155, 0.5155, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CutsceneContent/Path2D/PathFollow2D/Dragon:flip_h")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/CutsceneBorders")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 8),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": ["Dragon", "Center", "ROAAAAARRRR!!!!"],
"method": &"display_text"
}, {
"args": [],
"method": &"display_next"
}]
}

[sub_resource type="Animation" id="Animation_liycu"]
resource_name = "VillagersTerrified"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/CutsceneBorders")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": ["Terrified villagers", "Right", "The Dragon! It's breathing fire over the village!"],
"method": &"display_text"
}, {
"args": [],
"method": &"display_next"
}]
}

[sub_resource type="Animation" id="Animation_m3dm1"]
resource_name = "PrincessHelmet"
length = 5.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": ["cutscene_wear_helmet"],
"method": &"play_sprite"
}, {
"args": ["idle"],
"method": &"play_sprite"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/CutsceneBorders")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": ["Princess Elora", "Left", "Let me wear this..."],
"method": &"display_text"
}, {
"args": [],
"method": &"display_next"
}]
}

[sub_resource type="Animation" id="Animation_2tys1"]
resource_name = "PrincessCountOnMe"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/CutsceneBorders")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": ["Princess Elora", "Left", "You can count on me!"],
"method": &"display_text"
}, {
"args": [],
"method": &"display_next"
}]
}

[sub_resource type="Animation" id="Animation_mjpyd"]
resource_name = "VillagersLeave"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CutsceneContent/Villagers:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(187.143, 47.5), Vector2(347.143, 47.5)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/CutsceneBorders")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": ["Slightly less terrified villagers", "Right", "Thank you so much Princess, good luck!"],
"method": &"display_text"
}, {
"args": [],
"method": &"display_next"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pfwa1"]
_data = {
"DragonFly": SubResource("Animation_aurhn"),
"PrincessCountOnMe": SubResource("Animation_2tys1"),
"PrincessHelmet": SubResource("Animation_m3dm1"),
"PrincessOk": SubResource("Animation_q0qt0"),
"RESET": SubResource("Animation_vdnm5"),
"VillagersEnter": SubResource("Animation_kcwt5"),
"VillagersLeave": SubResource("Animation_mjpyd"),
"VillagersTerrified": SubResource("Animation_liycu")
}

[node name="Moving around" instance=ExtResource("1_m4urd")]
script = ExtResource("2_bw0ek")

[node name="NinePatchRect" parent="CanvasLayer" index="1"]
unique_name_in_owner = true

[node name="CountDownTimer" parent="CanvasLayer" index="2"]
unique_name_in_owner = true

[node name="CutsceneBorders" parent="CanvasLayer" index="3" instance=ExtResource("3_pscvc")]
unique_name_in_owner = true

[node name="Player" parent="." index="1"]
position = Vector2(81, 58)

[node name="Ground" type="TileMapLayer" parent="TileMap" index="4"]
position = Vector2(-25, -6)
tile_map_data = PackedByteArray("AAABAAQAAAAAAAAAAAD4/wQAAAABAAEAAAD5/wQAAAAAAAEAAAD6/wQAAAABAAEAAAD7/wQAAAABAAAAAAD8/wQAAAABAAEAAAD9/wQAAAABAAEAAAD+/wQAAAAAAAAAAAD//wQAAAAAAAAAAAAAAAQAAAAAAAAAAAACAAQAAAAAAAAAAAADAAQAAAAAAAAAAAAEAAQAAAAAAAAAAAAFAAQAAAAAAAAAAAAGAAQAAAAAAAAAAAAHAAQAAAAAAAAAAAAIAAQAAAAAAAAAAAAJAAQAAAAAAAAAAAD4//b/AAABAAAAAAD4//f/AAABAAEAAAD4//j/AAABAAAAAAD4//n/AAAAAAEAAAD4//r/AAAAAAEAAAD4//v/AAABAAEAAAD4//z/AAABAAAAAAD4//3/AAABAAEAAAD4//7/AAABAAAAAAD4////AAABAAEAAAD4/wAAAAAAAAEAAAD4/wEAAAABAAAAAAD4/wIAAAABAAAAAAD4/wMAAAAAAAEAAAD4/wUAAAABAAEAAAD4/wYAAAABAAAAAAD4/wcAAAABAAAAAAD4/wgAAAABAAEAAAD4/wkAAAABAAEAAAD5//b/AAABAAAAAAD5//f/AAABAAEAAAD5//j/AAABAAEAAAD5//n/AAABAAAAAAD5//r/AAABAAAAAAD5//v/AAABAAEAAAD5//z/AAAAAAEAAAD5//3/AAABAAEAAAD5//7/AAABAAEAAAD5////AAABAAAAAAD5/wAAAAAAAAEAAAD5/wEAAAAAAAEAAAD5/wIAAAAAAAEAAAD5/wMAAAAAAAEAAAD5/wUAAAAAAAEAAAD5/wYAAAABAAAAAAD5/wcAAAABAAAAAAD5/wgAAAABAAEAAAD5/wkAAAAAAAEAAAD6//b/AAABAAEAAAD6//f/AAABAAAAAAD6//j/AAABAAEAAAD6//n/AAABAAEAAAD6//r/AAABAAAAAAD6//v/AAAAAAEAAAD6//z/AAAAAAEAAAD6//3/AAABAAEAAAD6//7/AAABAAAAAAD6////AAAAAAEAAAD6/wAAAAABAAEAAAD6/wEAAAABAAEAAAD6/wIAAAABAAEAAAD6/wMAAAABAAAAAAD6/wUAAAABAAEAAAD6/wYAAAABAAAAAAD6/wcAAAABAAAAAAD6/wgAAAABAAAAAAD6/wkAAAABAAAAAAD7//b/AAAAAAEAAAD7//f/AAABAAEAAAD7//j/AAAAAAEAAAD7//n/AAABAAAAAAD7//r/AAAAAAEAAAD7//v/AAABAAEAAAD7//z/AAABAAAAAAD7//3/AAABAAEAAAD7//7/AAABAAAAAAD7////AAABAAAAAAD7/wAAAAABAAAAAAD7/wEAAAABAAAAAAD7/wIAAAABAAAAAAD7/wMAAAABAAEAAAD7/wUAAAAAAAEAAAD7/wYAAAABAAEAAAD7/wcAAAAAAAEAAAD7/wgAAAABAAAAAAD7/wkAAAAAAAEAAAD8//b/AAABAAEAAAD8//f/AAABAAAAAAD8//j/AAABAAAAAAD8//n/AAABAAEAAAD8//r/AAAAAAEAAAD8//v/AAABAAEAAAD8//z/AAABAAEAAAD8//3/AAABAAAAAAD8//7/AAAAAAEAAAD8////AAABAAAAAAD8/wAAAAABAAAAAAD8/wEAAAABAAAAAAD8/wIAAAAAAAEAAAD8/wMAAAABAAEAAAD8/wUAAAABAAEAAAD8/wYAAAAAAAEAAAD8/wcAAAAAAAEAAAD8/wgAAAABAAEAAAD8/wkAAAABAAEAAAD9//b/AAABAAAAAAD9//f/AAABAAEAAAD9//j/AAABAAEAAAD9//n/AAABAAEAAAD9//r/AAABAAEAAAD9//v/AAABAAAAAAD9//z/AAAAAAEAAAD9//3/AAAAAAEAAAD9//7/AAABAAEAAAD9////AAABAAEAAAD9/wAAAAABAAEAAAD9/wEAAAABAAAAAAD9/wIAAAABAAAAAAD9/wMAAAABAAAAAAD9/wUAAAAAAAEAAAD9/wYAAAAAAAEAAAD9/wcAAAABAAAAAAD9/wgAAAAAAAEAAAD9/wkAAAABAAEAAAD+/wUAAAAAAAEAAAD+/wYAAAABAAEAAAD+/wcAAAABAAAAAAD+/wgAAAABAAEAAAD+/wkAAAABAAAAAAD//wUAAAABAAAAAAD//wYAAAABAAAAAAD//wcAAAAAAAEAAAD//wgAAAAAAAEAAAD//wkAAAABAAAAAAAAAAUAAAABAAEAAAAAAAYAAAAAAAEAAAAAAAcAAAABAAEAAAAAAAgAAAABAAEAAAAAAAkAAAABAAAAAAABAAUAAAABAAAAAAABAAYAAAABAAAAAAABAAcAAAABAAAAAAABAAgAAAABAAEAAAABAAkAAAABAAEAAAACAAUAAAABAAAAAAACAAYAAAAAAAEAAAACAAcAAAAAAAEAAAACAAgAAAABAAEAAAACAAkAAAABAAAAAAADAAUAAAABAAEAAAADAAYAAAAAAAEAAAADAAcAAAAAAAEAAAADAAgAAAABAAEAAAADAAkAAAABAAAAAAAEAAUAAAABAAEAAAAEAAYAAAABAAAAAAAEAAcAAAABAAAAAAAEAAgAAAAAAAEAAAAEAAkAAAAAAAEAAAAFAAUAAAAAAAEAAAAFAAYAAAAAAAEAAAAFAAcAAAAAAAEAAAAFAAgAAAABAAAAAAAFAAkAAAAAAAEAAAAGAAUAAAAAAAEAAAAGAAYAAAAAAAEAAAAGAAcAAAABAAAAAAAGAAgAAAABAAAAAAAGAAkAAAABAAAAAAAHAAUAAAAAAAEAAAAHAAYAAAABAAEAAAAHAAcAAAAAAAEAAAAHAAgAAAAAAAEAAAAHAAkAAAAAAAEAAAAIAAUAAAABAAEAAAAIAAYAAAABAAAAAAAIAAcAAAAAAAEAAAAIAAgAAAABAAEAAAAIAAkAAAABAAEAAAAJAAUAAAABAAEAAAAJAAYAAAAAAAEAAAAJAAcAAAABAAAAAAAJAAgAAAAAAAEAAAAJAAkAAAABAAAAAAD3/wkAAAABAAEAAAD3/wgAAAABAAAAAAD3/wcAAAABAAAAAAD3/wYAAAABAAAAAAD3/wUAAAABAAEAAAD3/wQAAAABAAAAAAD3/wMAAAABAAEAAAD3/wIAAAAAAAEAAAD3/wEAAAABAAAAAAD3/wAAAAABAAAAAAD3////AAAAAAEAAAD3//7/AAAAAAEAAAD3//3/AAABAAAAAAD3//z/AAABAAAAAAD3//v/AAABAAEAAAD3//r/AAABAAEAAAD3//n/AAABAAEAAAD3//j/AAABAAEAAAD3//f/AAAAAAEAAAD3//b/AAABAAAAAAD2/wkAAAABAAEAAAD2/wgAAAAAAAEAAAD2/wcAAAAAAAEAAAD2/wYAAAABAAEAAAD2/wUAAAABAAAAAAD2/wQAAAAAAAEAAAD2/wMAAAABAAEAAAD2/wIAAAABAAAAAAD2/wEAAAABAAAAAAD2/wAAAAAAAAEAAAD2////AAABAAAAAAD2//7/AAABAAAAAAD2//3/AAABAAEAAAD2//z/AAAAAAEAAAD2//v/AAAAAAEAAAD2//r/AAABAAEAAAD2//n/AAABAAAAAAD2//j/AAAAAAEAAAD2//f/AAABAAAAAAD2//b/AAABAAAAAAD1/wkAAAAAAAEAAAD1/wgAAAABAAEAAAD1/wcAAAAAAAEAAAD1/wYAAAABAAAAAAD1/wUAAAABAAAAAAD1/wQAAAABAAAAAAD1/wMAAAAAAAEAAAD1/wIAAAABAAEAAAD1/wEAAAAAAAEAAAD1/wAAAAABAAAAAAD1////AAAAAAEAAAD1//7/AAABAAEAAAD1//3/AAAAAAEAAAD1//z/AAABAAAAAAD1//v/AAABAAAAAAD1//r/AAABAAAAAAD1//n/AAABAAEAAAD1//j/AAAAAAEAAAD1//f/AAABAAAAAAD1//b/AAABAAAAAAD0/wkAAAABAAAAAAD0/wgAAAAAAAEAAAD0/wcAAAABAAAAAAD0/wYAAAABAAEAAAD0/wUAAAAAAAEAAAD0/wQAAAAAAAEAAAD0/wMAAAABAAEAAAD0/wIAAAAAAAEAAAD0/wEAAAABAAAAAAD0/wAAAAABAAAAAAD0////AAABAAEAAAD0//7/AAABAAEAAAD0//3/AAAAAAEAAAD0//z/AAAAAAEAAAD0//v/AAABAAEAAAD0//r/AAABAAAAAAD0//n/AAABAAAAAAD0//j/AAABAAAAAAD0//f/AAABAAAAAAD0//b/AAAAAAEAAADz/wkAAAABAAEAAADz/wgAAAABAAEAAADz/wcAAAABAAEAAADz/wYAAAABAAEAAADz/wUAAAAAAAEAAADz/wQAAAAAAAEAAADz/wMAAAAAAAEAAADz/wIAAAABAAAAAADz/wEAAAABAAAAAADz/wAAAAABAAEAAADz////AAABAAEAAADz//7/AAABAAEAAADz//3/AAAAAAEAAADz//z/AAABAAEAAADz//v/AAABAAAAAADz//r/AAAAAAEAAADz//n/AAABAAAAAADz//j/AAAAAAEAAADz//f/AAABAAAAAADz//b/AAABAAAAAADy/wkAAAABAAEAAADy/wgAAAABAAEAAADy/wcAAAAAAAEAAADy/wYAAAAAAAEAAADy/wUAAAABAAAAAADy/wQAAAABAAAAAADy/wMAAAAAAAEAAADy/wIAAAABAAAAAADy/wEAAAABAAEAAADy/wAAAAABAAAAAADy////AAABAAAAAADy//7/AAABAAEAAADy//3/AAAAAAEAAADy//z/AAABAAEAAADy//v/AAAAAAEAAADy//r/AAAAAAEAAADy//n/AAABAAEAAADy//j/AAABAAAAAADy//f/AAAAAAEAAADy//b/AAABAAAAAADx/wkAAAABAAAAAADx/wgAAAABAAAAAADx/wcAAAAAAAEAAADx/wYAAAAAAAEAAADx/wUAAAABAAAAAADx/wQAAAABAAEAAADx/wMAAAABAAEAAADx/wIAAAABAAAAAADx/wEAAAABAAAAAADx/wAAAAABAAEAAADx////AAABAAEAAADx//7/AAABAAAAAADx//3/AAAAAAEAAADx//z/AAABAAAAAADx//v/AAABAAAAAADx//r/AAABAAEAAADx//n/AAAAAAEAAADx//j/AAABAAAAAADx//f/AAAAAAEAAADx//b/AAABAAAAAAAhAAkAAAABAAEAAAAhAAgAAAAAAAEAAAAhAAcAAAABAAEAAAAhAAYAAAAAAAEAAAAhAAUAAAABAAAAAAAgAAkAAAAAAAEAAAAgAAgAAAAAAAEAAAAgAAcAAAABAAEAAAAgAAYAAAAAAAEAAAAgAAUAAAAAAAEAAAAfAAkAAAAAAAEAAAAfAAgAAAAAAAEAAAAfAAcAAAABAAEAAAAfAAYAAAAAAAEAAAAfAAUAAAABAAEAAAAeAAkAAAABAAEAAAAeAAgAAAAAAAEAAAAeAAcAAAAAAAEAAAAeAAYAAAAAAAEAAAAeAAUAAAAAAAEAAAAdAAkAAAAAAAEAAAAdAAgAAAABAAAAAAAdAAcAAAAAAAEAAAAdAAYAAAAAAAEAAAAdAAUAAAAAAAEAAAAcAAkAAAAAAAEAAAAcAAgAAAAAAAEAAAAcAAcAAAABAAEAAAAcAAYAAAAAAAEAAAAcAAUAAAAAAAEAAAAbAAkAAAABAAAAAAAbAAgAAAAAAAEAAAAbAAcAAAAAAAEAAAAbAAYAAAAAAAEAAAAbAAUAAAAAAAEAAAAaAAkAAAAAAAEAAAAaAAgAAAABAAEAAAAaAAcAAAAAAAEAAAAaAAYAAAAAAAEAAAAaAAUAAAAAAAEAAAAZAAkAAAAAAAEAAAAZAAgAAAAAAAEAAAAZAAcAAAAAAAEAAAAZAAYAAAAAAAEAAAAZAAUAAAABAAEAAAAYAAkAAAAAAAEAAAAYAAgAAAAAAAEAAAAYAAcAAAAAAAEAAAAYAAYAAAAAAAEAAAAYAAUAAAAAAAEAAAAXAAkAAAABAAEAAAAXAAgAAAABAAAAAAAXAAcAAAAAAAEAAAAXAAYAAAAAAAEAAAAXAAUAAAAAAAEAAAAWAAkAAAAAAAEAAAAWAAgAAAAAAAEAAAAWAAcAAAABAAEAAAAWAAYAAAAAAAEAAAAWAAUAAAAAAAEAAAAVAAkAAAAAAAEAAAAVAAgAAAAAAAEAAAAVAAcAAAAAAAEAAAAVAAYAAAAAAAEAAAAVAAUAAAABAAEAAAAUAAkAAAAAAAEAAAAUAAgAAAABAAEAAAAUAAcAAAAAAAEAAAAUAAYAAAAAAAEAAAAUAAUAAAAAAAEAAAATAAkAAAABAAAAAAATAAgAAAABAAAAAAATAAcAAAABAAAAAAATAAYAAAABAAEAAAATAAUAAAAAAAEAAAASAAkAAAAAAAEAAAASAAgAAAAAAAEAAAASAAcAAAABAAAAAAASAAYAAAAAAAEAAAASAAUAAAAAAAEAAAARAAkAAAAAAAEAAAARAAgAAAABAAEAAAARAAcAAAABAAEAAAARAAYAAAAAAAEAAAARAAUAAAAAAAEAAAAQAAkAAAAAAAEAAAAQAAgAAAAAAAEAAAAQAAcAAAABAAAAAAAQAAYAAAAAAAEAAAAQAAUAAAAAAAEAAAAPAAkAAAAAAAEAAAAPAAgAAAABAAAAAAAPAAcAAAAAAAEAAAAPAAYAAAABAAEAAAAPAAUAAAABAAEAAAAOAAkAAAABAAEAAAAOAAgAAAABAAEAAAAOAAcAAAAAAAEAAAAOAAYAAAAAAAEAAAAOAAUAAAABAAEAAAANAAkAAAABAAAAAAANAAgAAAAAAAEAAAANAAcAAAABAAAAAAANAAYAAAAAAAEAAAANAAUAAAABAAEAAAAMAAkAAAAAAAEAAAAMAAgAAAABAAEAAAAMAAcAAAAAAAEAAAAMAAYAAAAAAAEAAAAMAAUAAAAAAAEAAAALAAkAAAABAAEAAAALAAgAAAAAAAEAAAALAAcAAAABAAAAAAALAAYAAAABAAEAAAALAAUAAAAAAAEAAAAKAAkAAAABAAEAAAAKAAgAAAAAAAEAAAAKAAcAAAAAAAEAAAAKAAYAAAAAAAEAAAAKAAUAAAAAAAEAAAAKAAQAAAAAAAAAAAALAAQAAAAAAAAAAAAMAAQAAAAAAAAAAAANAAQAAAAAAAAAAAAOAAQAAAAAAAAAAAAPAAQAAAAAAAAAAAAQAAQAAAAAAAAAAAARAAQAAAAAAAAAAAASAAQAAAAAAAAAAAATAAQAAAAAAAAAAAAUAAQAAAAAAAAAAAAVAAQAAAAAAAAAAAAWAAQAAAAAAAAAAAAXAAQAAAAAAAAAAAAYAAQAAAAAAAAAAAAZAAQAAAAAAAAAAAAaAAQAAAAAAAAAAAAbAAQAAAAAAAAAAAAcAAQAAAAAAAAAAAAdAAQAAAAAAAAAAAAeAAQAAAAAAAAAAAAfAAQAAAAAAAAAAAAgAAQAAAAAAAAAAAAhAAQAAAAAAAAAAAAsAAkAAAAAAAEAAAAsAAgAAAABAAEAAAAsAAcAAAAAAAEAAAAsAAYAAAAAAAEAAAAsAAUAAAAAAAEAAAAsAAQAAAAAAAEAAAAsAAMAAAAAAAEAAAAsAAIAAAAAAAEAAAAsAAEAAAABAAAAAAAsAAAAAAABAAEAAAAsAP//AAAAAAEAAAAsAP7/AAAAAAEAAAAsAP3/AAAAAAEAAAAsAPz/AAAAAAEAAAAsAPv/AAAAAAEAAAAsAPr/AAABAAAAAAAsAPn/AAAAAAEAAAAsAPj/AAAAAAEAAAAsAPf/AAAAAAEAAAAsAPb/AAAAAAEAAAArAAkAAAAAAAEAAAArAAgAAAAAAAEAAAArAAcAAAABAAEAAAArAAYAAAAAAAEAAAArAAUAAAAAAAEAAAArAAQAAAAAAAEAAAArAAMAAAAAAAEAAAArAAIAAAABAAAAAAArAAEAAAAAAAEAAAArAAAAAAAAAAEAAAArAP//AAABAAAAAAArAP7/AAAAAAEAAAArAP3/AAAAAAEAAAArAPz/AAAAAAEAAAArAPv/AAAAAAEAAAArAPr/AAAAAAEAAAArAPn/AAAAAAEAAAArAPj/AAAAAAEAAAArAPf/AAAAAAEAAAArAPb/AAABAAAAAAAqAAkAAAAAAAEAAAAqAAgAAAABAAAAAAAqAAcAAAAAAAEAAAAqAAYAAAAAAAEAAAAqAAUAAAAAAAEAAAAqAAQAAAAAAAEAAAAqAAMAAAAAAAEAAAAqAAIAAAAAAAEAAAAqAAEAAAABAAAAAAAqAAAAAAAAAAEAAAAqAP//AAABAAEAAAAqAP7/AAABAAAAAAAqAP3/AAAAAAEAAAAqAPz/AAABAAAAAAAqAPv/AAAAAAEAAAAqAPr/AAAAAAEAAAAqAPn/AAAAAAEAAAAqAPj/AAAAAAEAAAAqAPf/AAAAAAEAAAAqAPb/AAAAAAEAAAApAAkAAAAAAAEAAAApAAgAAAAAAAEAAAApAAcAAAAAAAEAAAApAAYAAAAAAAEAAAApAAUAAAAAAAEAAAApAAQAAAAAAAEAAAApAAMAAAAAAAEAAAApAAIAAAAAAAEAAAApAAEAAAAAAAEAAAApAAAAAAABAAEAAAApAP//AAAAAAEAAAApAP7/AAABAAAAAAApAP3/AAAAAAEAAAApAPz/AAABAAEAAAApAPv/AAAAAAEAAAApAPr/AAAAAAEAAAApAPn/AAAAAAEAAAApAPj/AAAAAAEAAAApAPf/AAAAAAEAAAApAPb/AAAAAAEAAAAoAAkAAAAAAAEAAAAoAAgAAAAAAAEAAAAoAAcAAAABAAAAAAAoAAYAAAAAAAEAAAAoAAUAAAABAAAAAAAoAAQAAAAAAAEAAAAoAAMAAAABAAEAAAAoAAIAAAABAAEAAAAoAAEAAAAAAAEAAAAoAAAAAAABAAEAAAAoAP//AAAAAAEAAAAoAP7/AAAAAAEAAAAoAP3/AAAAAAEAAAAoAPz/AAAAAAEAAAAoAPv/AAAAAAEAAAAoAPr/AAAAAAEAAAAoAPn/AAAAAAEAAAAoAPj/AAAAAAEAAAAoAPf/AAAAAAEAAAAoAPb/AAAAAAEAAAAnAAkAAAAAAAEAAAAnAAgAAAABAAAAAAAnAAcAAAAAAAEAAAAnAAYAAAAAAAEAAAAnAAUAAAAAAAEAAAAnAAQAAAAAAAEAAAAnAAMAAAABAAEAAAAnAAIAAAAAAAEAAAAnAAEAAAAAAAEAAAAnAAAAAAAAAAEAAAAnAP//AAAAAAEAAAAnAP7/AAABAAEAAAAnAP3/AAABAAEAAAAnAPz/AAAAAAEAAAAnAPv/AAABAAEAAAAnAPr/AAABAAAAAAAnAPn/AAAAAAEAAAAnAPj/AAABAAEAAAAnAPf/AAAAAAEAAAAnAPb/AAAAAAEAAAAmAAkAAAABAAEAAAAmAAgAAAABAAEAAAAmAAcAAAAAAAEAAAAmAAYAAAABAAAAAAAmAAUAAAAAAAEAAAAmAAQAAAAAAAEAAAAmAAMAAAAAAAEAAAAmAAIAAAABAAAAAAAmAAEAAAAAAAEAAAAmAAAAAAAAAAEAAAAmAP//AAAAAAEAAAAmAP7/AAAAAAEAAAAmAP3/AAAAAAEAAAAmAPz/AAAAAAEAAAAmAPv/AAAAAAEAAAAmAPr/AAABAAEAAAAmAPn/AAAAAAEAAAAmAPj/AAAAAAEAAAAmAPf/AAAAAAEAAAAmAPb/AAAAAAEAAAAlAAkAAAAAAAEAAAAlAAgAAAABAAEAAAAlAAcAAAAAAAEAAAAlAAYAAAABAAEAAAAlAAUAAAAAAAEAAAAlAAQAAAABAAAAAAAlAAMAAAAAAAEAAAAlAAIAAAABAAAAAAAlAAEAAAAAAAEAAAAlAAAAAAAAAAEAAAAlAP//AAAAAAEAAAAlAP7/AAAAAAEAAAAlAP3/AAABAAAAAAAlAPz/AAAAAAEAAAAlAPv/AAAAAAEAAAAlAPr/AAAAAAEAAAAlAPn/AAAAAAEAAAAlAPj/AAAAAAEAAAAlAPf/AAAAAAEAAAAlAPb/AAAAAAEAAAAkAAkAAAAAAAEAAAAkAAgAAAAAAAEAAAAkAAcAAAAAAAEAAAAkAAYAAAAAAAEAAAAkAAUAAAAAAAEAAAAkAAQAAAABAAEAAAAkAAMAAAAAAAEAAAAkAAIAAAABAAEAAAAkAAEAAAAAAAEAAAAkAAAAAAAAAAEAAAAkAP//AAABAAEAAAAkAP7/AAAAAAEAAAAkAP3/AAAAAAEAAAAkAPz/AAAAAAEAAAAkAPv/AAAAAAEAAAAkAPr/AAAAAAEAAAAkAPn/AAAAAAEAAAAkAPj/AAAAAAEAAAAkAPf/AAAAAAEAAAAkAPb/AAABAAAAAAAjAAkAAAAAAAEAAAAjAAgAAAAAAAEAAAAjAAcAAAABAAEAAAAjAAYAAAAAAAEAAAAjAAUAAAAAAAEAAAAjAAQAAAABAAAAAAAjAAMAAAAAAAEAAAAjAAIAAAAAAAEAAAAjAAEAAAAAAAEAAAAjAAAAAAABAAEAAAAjAP//AAAAAAEAAAAjAP7/AAAAAAEAAAAjAP3/AAAAAAEAAAAjAPz/AAAAAAEAAAAjAPv/AAAAAAEAAAAjAPr/AAAAAAEAAAAjAPn/AAABAAAAAAAjAPj/AAAAAAEAAAAjAPf/AAAAAAEAAAAjAPb/AAAAAAEAAAAiAAkAAAABAAEAAAAiAAgAAAABAAEAAAAiAAcAAAAAAAEAAAAiAAYAAAABAAEAAAAiAAUAAAAAAAEAAAAiAAQAAAAAAAEAAAAiAAMAAAABAAAAAAAiAAIAAAAAAAEAAAAiAAEAAAAAAAEAAAAiAAAAAAAAAAEAAAAiAP//AAAAAAEAAAAiAP7/AAABAAEAAAAiAP3/AAAAAAEAAAAiAPz/AAAAAAEAAAAiAPv/AAAAAAEAAAAiAPr/AAABAAEAAAAiAPn/AAAAAAEAAAAiAPj/AAABAAAAAAAiAPf/AAAAAAEAAAAiAPb/AAAAAAEAAAA=")
tile_set = ExtResource("2_0befv")

[node name="KillZone" parent="." index="3"]
position = Vector2(-13, 441)

[node name="ShowScoreUINotifier" parent="." index="4"]
position = Vector2(484, -274)
scale = Vector2(0.925003, 2.05)

[node name="Labels" type="Node2D" parent="." index="5"]

[node name="TutoMoveLabel" type="Label" parent="Labels" index="0"]
unique_name_in_owner = true
offset_left = -17.0
offset_top = -8.0
offset_right = 182.0
offset_bottom = 15.0
theme_override_colors/font_color = Color(0, 0, 0.172549, 1)
theme_override_fonts/font = ExtResource("4_16v5f")
theme_override_font_sizes/font_size = 8
text = "Left arrow or 'q' to move left
Right arrow or 'd' to move right"
metadata/_edit_use_anchors_ = true

[node name="Label8" type="Label" parent="Labels" index="1"]
offset_left = 443.0
offset_top = 7.0
offset_right = 536.0
offset_bottom = 15.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_16v5f")
theme_override_font_sizes/font_size = 8
text = "FINISH LINE"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Finish" parent="." index="6"]
position = Vector2(481, 26)

[node name="CutsceneContent" type="Node2D" parent="." index="7"]
unique_name_in_owner = true

[node name="Villagers" type="AnimatedSprite2D" parent="CutsceneContent" index="0"]
position = Vector2(347.143, 47.5)
scale = Vector2(0.385714, 0.385714)
sprite_frames = SubResource("SpriteFrames_gk8l2")

[node name="Shaker" parent="CutsceneContent/Villagers" index="0" instance=ExtResource("7_jisdn")]
unique_name_in_owner = true
randomStrength = 10.0
shakeFade = 0.0

[node name="Path2D" type="Path2D" parent="CutsceneContent" index="1"]
position = Vector2(347.143, -16.5)
scale = Vector2(0.385714, 0.385714)
curve = SubResource("Curve2D_qldd0")

[node name="PathFollow2D" type="PathFollow2D" parent="CutsceneContent/Path2D" index="0"]
position = Vector2(-0.370178, -1.29628)
rotation = 2.81984
scale = Vector2(1, 1)
rotates = false

[node name="Dragon" type="AnimatedSprite2D" parent="CutsceneContent/Path2D/PathFollow2D" index="0"]
position = Vector2(0.0587158, -1.34683)
rotation = -2.81984
scale = Vector2(1, 1)
sprite_frames = SubResource("SpriteFrames_kh3hk")

[node name="CutsceneAnim" type="AnimationPlayer" parent="CutsceneContent" index="2"]
unique_name_in_owner = true
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_pfwa1")
}
